# VolumeRender

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VolumeRender.sln  imgui.ini
.github/workflows/: windows.yml
VolumeRender/: Appication.cpp  Application.h  ApplicationVolumeRender.cpp  ApplicationVolumeRender.h  Common.h  Cube.h  Main.cpp  TransferFunction.h  VolumeRender.vcxproj  VolumeRender.vcxproj.filters  cpp.hint  imgui.ini  packages.config
VolumeRender/Data/Shaders/: Accumulation.hlsl  Blitting.hlsl  BoundingBox.hlsl  Common.hlsl  ComputeGradient.hlsl  Denoiser.hlsl  Dispersion.hlsl  Gradient.hlsl  LevelOfDetail.hlsl  PathTracing.hlsl  RayTracing.hlsl  ToneMap.hlsl
VolumeRender/Data/TransferFunctions/: ManixTransferFunction.json
cmake/: cmake_settings.cmake  compiler_settings.cmake
content/Shaders/: Accumulation.hlsl  Blitting.hlsl  Common.hlsl  ComputeGradient.hlsl  ComputeLevelOfDetail.hlsl  ComputePrimaryRays.hlsl  ComputeRadiance.hlsl  ComputeTiles.hlsl  Debug.hlsl  DebugTiles.hlsl  Dispersion.hlsl  GenerateRays.hlsl  LevelOfDetail.hlsl  ResetTiles.hlsl  TextureBlit.hlsl  ToneMap.hlsl
include/: Application.h  ApplicationVolumeRender.h  Common.h  TransferFunction.h
include/Hawk/Common/: Defines.hpp  INumberArray.hpp  NonCopyable.hpp  Singleton.hpp
include/Hawk/Components/: Camera.hpp  Transform.hpp
include/Hawk/Containers/: ThreadSafeQueue.hpp
include/Hawk/Geometry/: Generator.hpp
include/Hawk/Math/: Converters.hpp  Functions.hpp  Geometry.hpp  Spline.hpp  (+1 more)
source/: Application.cpp  ApplicationVolumeRender.cpp  Main.cpp
(+11 files in other folders)
